Adding GetCanary
