# pkg/api/prog/prog_grpc.pb.go
@@ -1,8 +1,4 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.2.0
-// - protoc             (unknown)
-// source: api/prog/prog.proto
 
 package api
 
@@ -26,6 +22,9 @@ type ProgressiveDeliveryServiceClient interface {
 	//
 	// ListCanaries returns with a list of Canary objects.
 	ListCanaries(ctx context.Context, in *ListCanariesRequest, opts ...grpc.CallOption) (*ListCanariesResponse, error)
+	//
+	// GetCanary returns a Canary object.
+	GetCanary(ctx context.Context, in *GetCanaryRequest, opts ...grpc.CallOption) (*GetCanaryResponse, error)
 }
 
 type progressiveDeliveryServiceClient struct {
@@ -54,6 +53,15 @@ func (c *progressiveDeliveryServiceClient) ListCanaries(ctx context.Context, in 
 	return out, nil
 }
 
+func (c *progressiveDeliveryServiceClient) GetCanary(ctx context.Context, in *GetCanaryRequest, opts ...grpc.CallOption) (*GetCanaryResponse, error) {
+	out := new(GetCanaryResponse)
+	err := c.cc.Invoke(ctx, "/ProgressiveDeliveryService/GetCanary", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ProgressiveDeliveryServiceServer is the server API for ProgressiveDeliveryService service.
 // All implementations must embed UnimplementedProgressiveDeliveryServiceServer
 // for forward compatibility
@@ -62,6 +70,9 @@ type ProgressiveDeliveryServiceServer interface {
 	//
 	// ListCanaries returns with a list of Canary objects.
 	ListCanaries(context.Context, *ListCanariesRequest) (*ListCanariesResponse, error)
+	//
+	// GetCanary returns a Canary object.
+	GetCanary(context.Context, *GetCanaryRequest) (*GetCanaryResponse, error)
 	mustEmbedUnimplementedProgressiveDeliveryServiceServer()
 }
 
@@ -74,6 +85,9 @@ func (UnimplementedProgressiveDeliveryServiceServer) GetVersion(context.Context,
 }
 func (UnimplementedProgressiveDeliveryServiceServer) ListCanaries(context.Context, *ListCanariesRequest) (*ListCanariesResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ListCanaries not implemented")
+}
+func (UnimplementedProgressiveDeliveryServiceServer) GetCanary(context.Context, *GetCanaryRequest) (*GetCanaryResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetCanary not implemented")
 }
 func (UnimplementedProgressiveDeliveryServiceServer) mustEmbedUnimplementedProgressiveDeliveryServiceServer() {
 }
@@ -125,6 +139,24 @@ func _ProgressiveDeliveryService_ListCanaries_Handler(srv interface{}, ctx conte
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ProgressiveDeliveryService_GetCanary_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetCanaryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProgressiveDeliveryServiceServer).GetCanary(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/ProgressiveDeliveryService/GetCanary",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProgressiveDeliveryServiceServer).GetCanary(ctx, req.(*GetCanaryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ProgressiveDeliveryService_ServiceDesc is the grpc.ServiceDesc for ProgressiveDeliveryService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -139,6 +171,10 @@ var ProgressiveDeliveryService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "ListCanaries",
 			Handler:    _ProgressiveDeliveryService_ListCanaries_Handler,
+		},
+		{
+			MethodName: "GetCanary",
+			Handler:    _ProgressiveDeliveryService_GetCanary_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
